--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flip-move": "^3.0.4",
+    "react-intersection-observer": "^8.32.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4",
